@@ -1,31 +1,16 @@
 <?xml version = '1.0' encoding = 'UTF-8'?>
 <!DOCTYPE KDevPrjSession>
 <KDevPrjSession>
- <DocsAndViews NumberOfDocuments="8" >
+ <DocsAndViews NumberOfDocuments="3" >
   <Doc0 NumberOfViews="1" URL="file:///home/bastian/programmieren/katapult/trunk/katapult/katapult/katapult.cpp" >
-   <View0 line="322" Type="Source" />
+   <View0 Type="Source" />
   </Doc0>
   <Doc1 NumberOfViews="1" URL="file:///home/bastian/programmieren/katapult/trunk/katapult/katapult/katapult.h" >
-   <View0 line="65" Type="Source" />
+   <View0 line="58" Type="Source" />
   </Doc1>
-  <Doc2 NumberOfViews="1" URL="file:///home/bastian/programmieren/katapult/trunk/katapult/plugins/display/glassdisplay/glassdisplay.cpp" >
-   <View0 line="54" Type="Source" />
+  <Doc2 NumberOfViews="1" URL="file:///home/bastian/programmieren/katapult/trunk/katapult/katapult/main.cpp" >
+   <View0 line="57" Type="Source" />
   </Doc2>
-  <Doc3 NumberOfViews="1" URL="file:///home/bastian/programmieren/katapult/trunk/katapult/plugins/display/glassdisplay/glassdisplay.h" >
-   <View0 line="51" Type="Source" />
-  </Doc3>
-  <Doc4 NumberOfViews="1" URL="file:///home/bastian/programmieren/katapult/trunk/katapult/common/katapultdisplay.h" >
-   <View0 line="54" Type="Source" />
-  </Doc4>
-  <Doc5 NumberOfViews="1" URL="file:///home/bastian/programmieren/katapult/trunk/katapult/common/katapultdisplay.cpp" >
-   <View0 line="43" Type="Source" />
-  </Doc5>
-  <Doc6 NumberOfViews="1" URL="file:///home/bastian/programmieren/katapult/trunk/katapult/katapult/katapult.moc" >
-   <View0 line="0" Type="Source" />
-  </Doc6>
-  <Doc7 NumberOfViews="1" URL="file:///home/bastian/programmieren/katapult/trunk/katapult/katapult/main.cpp" >
-   <View0 line="18" Type="Source" />
-  </Doc7>
  </DocsAndViews>
  <pluginList>
   <kdevdebugger>
